# financial-coach-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
financial_coach_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
financial_coach_agent/skills/financial-coach/: skill.yaml
tests/: test_main.py
